--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "url": "https://github.com/nemtsov/koa-json-mask/issues"
   },
   "homepage": "https://github.com/nemtsov/koa-json-mask#readme",
-  "description":
-    "Middleware allowing the client to filter the response to only what they need",
+  "description": "Middleware allowing the client to filter the response to only what they need",
   "directories": {
     "example": "examples",
     "test": "test"
@@ -29,9 +28,10 @@
     "json-mask": "^0.3.8"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/.bin/_mocha test/*"
   },
   "devDependencies": {
+    "co-mocha": "^1.2.2",
     "koa": "^1.4.1",
     "mocha": "^5.0.0",
     "supertest": "^3.0.0"
@@ -39,6 +39,8 @@
   "engines": {
     "node": ">=7.6.0"
   },
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "license": "MIT"
 }
